Add initial files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfume</title>
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -22,13 +23,13 @@
             <span>Inspir</span>
           </div>
 
-          <div>
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#">Shop</a></li>
-              <li class="nav-item"><a href="#">Login</a></li>
-              <li class="nav-item"><a href="#">Cart</a></li>
-            </ul>
-          </div>
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#">Shop</a></li>
+            <li class="nav-item"><a href="#">Login</a></li>
+            <li class="nav-item">
+              <a href="#"><ion-icon name="cart"></ion-icon></a>
+            </li>
+          </ul>
         </nav>
 
         <div class="hero-intro">
@@ -46,32 +47,32 @@
 
         <div class="product-list">
           <div class="product">
-            <img src="images/martin-kozon-uqxDd1A4m00-unsplash.jpg" alt="" />
+            <img src="images/laura-chouette--W7o_WC102U-unsplash.jpg" alt="" />
             <div class="product-description">
-              <h4>Lorem</h4>
+              <h4>Chanel</h4>
               <p>
                 Lorem ipsum dolor sit, adipisicing elit. Nesciunt, incidunt?
               </p>
             </div>
           </div>
           <div class="product">
-            <img src="images/shri-vKOj2FPhz1Q-unsplash.jpg" alt="" />
+            <img src="images/sagar-sawant-civayXc2m9c-unsplash.jpg" alt="" />
             <div class="product-description">
-              <h4>Elit</h4>
+              <h4>Calvin Klein</h4>
               <p>Lorem , amet consectetur adipisicing elit. Nesciunt</p>
             </div>
           </div>
           <div class="product">
-            <img src="images/conor-luddy-IVaKksEZmZA-unsplash.jpg" alt="" />
+            <img src="images/laura-chouette-aVs_PcvTe0E-unsplash.jpg" alt="" />
             <div class="product-description">
-              <h4>Ipsum</h4>
+              <h4>YSL(Black Opium)</h4>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
             </div>
           </div>
           <div class="product">
-            <img src="images/mikita-yo-yHg6p8vW_Is-unsplash.jpg" alt="" />
+            <img src="images/gift-habeshaw-C1qrJ9i4EPc-unsplash.jpg" alt="" />
             <div class="product-description">
-              <h4>Amet</h4>
+              <h4>Creed</h4>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Nesciunt, incidunt?
@@ -79,16 +80,16 @@
             </div>
           </div>
           <div class="product">
-            <img src="images/simone-hutsch-l8fyK9RS-OU-unsplash.jpg" alt="" />
+            <img src="images/jeroen-van-roij-sLQt9PjsCcs-unsplash.jpg" alt="" />
             <div class="product-description">
-              <h4>Dolor</h4>
+              <h4>Prada</h4>
               <p>Lorem ipsum dolor sit, amet consectetur Nesciunt, incidunt?</p>
             </div>
           </div>
           <div class="product">
-            <img src="images/sebin-thomas-OdBFUurPHjo-unsplash.jpg" alt="" />
+            <img src="images/laura-chouette-mKGHmhQh-K8-unsplash.jpg" alt="" />
             <div class="product-description">
-              <h4>Sit</h4>
+              <h4>Givenchy(L'Interdit)</h4>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Nesciunt, incidunt?
@@ -113,6 +114,51 @@
           amet consectetur adipisicing elit. Adipisci, officia.
         </p>
       </div>
+
+      <div class="collection-one">
+        <div class="collection-img">
+          <img
+            src="images/ali-bakhtiari-7ic3yF64FS8-unsplash-removebg-preview.png"
+            alt=""
+          />
+        </div>
+
+        <div class="collection-img">
+          <img
+            src="images/anna-daudelin-m9lnm9jL918-unsplash-removebg-preview.png"
+            alt=""
+          />
+        </div>
+
+        <div class="collection-img">
+          <img
+            src="images/laura-chouette-jmSl8pSJDFM-unsplash-removebg-preview.png"
+            alt=""
+          />
+        </div>
+
+        <div class="collection-img">
+          <img
+            src="images/laura-chouette--W7o_WC102U-unsplash-removebg-preview.png"
+            alt=""
+          />
+        </div>
+
+        <div class="collection-img">
+          <img
+            src="images/laura-chouette-4sKdeIMiFEI-unsplash-removebg-preview.png"
+            alt=""
+          />
+        </div>
+      </div>
     </section>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
