Add frag-combo section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
             src="images/ali-bakhtiari-7ic3yF64FS8-unsplash-removebg-preview.png"
             alt=""
           />
+          <div class="collection-text">
+            <h4>Lorem</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+              veritatis.
+            </p>
+          </div>
         </div>
 
         <div class="collection-img">
@@ -128,6 +135,13 @@
             src="images/anna-daudelin-m9lnm9jL918-unsplash-removebg-preview.png"
             alt=""
           />
+          <div class="collection-text">
+            <h4>Lorem</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+              veritatis.
+            </p>
+          </div>
         </div>
 
         <div class="collection-img">
@@ -135,6 +149,13 @@
             src="images/laura-chouette-jmSl8pSJDFM-unsplash-removebg-preview.png"
             alt=""
           />
+          <div class="collection-text">
+            <h4>Lorem</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+              veritatis.
+            </p>
+          </div>
         </div>
 
         <div class="collection-img">
@@ -142,6 +163,13 @@
             src="images/laura-chouette--W7o_WC102U-unsplash-removebg-preview.png"
             alt=""
           />
+          <div class="collection-text">
+            <h4>Lorem</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+              veritatis.
+            </p>
+          </div>
         </div>
 
         <div class="collection-img">
@@ -149,7 +177,63 @@
             src="images/laura-chouette-4sKdeIMiFEI-unsplash-removebg-preview.png"
             alt=""
           />
+          <div class="collection-text">
+            <h4>Lorem</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+              veritatis.
+            </p>
+          </div>
         </div>
+      </div>
+    </section>
+
+    <section class="perfume-group-section">
+      <div class="perfume-group-images">
+        <div class="dis-flex gap-md mar-bottom align-just-ct">
+          <div class="perfume-group-img">
+            <img src="images/delfina-iacub-nrkgRRskOBo-unsplash.jpg" alt="" />
+          </div>
+          <div class="perfume-group-img">
+            <img src="images/rosy-h-nguyen-5HrlEGTsaB4-unsplash.jpg" alt="" />
+          </div>
+        </div>
+        <div class="dis-flex gap-md align-just-ct">
+          <div class="perfume-group-img">
+            <img src="images/yixian-zhao-q7iZCOXGOWY-unsplash.jpg" alt="" />
+          </div>
+          <div class="perfume-group-img">
+            <img src="images/laura-chouette--W7o_WC102U-unsplash.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="perfume-group-text">
+        <h4>Combo Packs</h4>
+        <h2>"The Four-Frag Combo"</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+          laboriosam labore rem sequi consequatur maxime eveniet in sunt
+          corrupti cum? Lorem, ipsum dolor sit amet consectetur adipisicing
+          elit. Ut, temporibus.
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi enim
+          expedita iusto, esse voluptatibus voluptatum!
+        </p>
+
+        <ul class="perfume-group-list">
+          <li><span>Chanel - Silance</span></li>
+          <li><span>Roberto Cavalli - Bemma Di Paradiso</span></li>
+          <li><span>Versace - Baracat</span></li>
+          <li><span>Chanel - No 5</span></li>
+        </ul>
+
+        <a href="" class="perfume-group-btn">
+          Shop Now<ion-icon
+            class="arrow-right"
+            name="arrow-forward-outline"
+          ></ion-icon>
+        </a>
       </div>
     </section>
     <script
