Added media queries for max-width: 27em

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span>Inspir</span>
           </div>
 
-          <ul class="nav-list">
+          <ul class="nav-list nav-first">
             <li class="nav-item"><a href="#">Home</a></li>
             <li class="nav-item"><a href="#">About</a></li>
             <li class="nav-item"><a href="#">Blog</a></li>
@@ -195,7 +195,7 @@
 
     <section class="perfume-group-section">
       <div class="perfume-group-images">
-        <div class="dis-flex gap-md mar-bottom align-just-ct">
+        <div class="dis-flex gap-md mar-bottom align-just-ct flex-d-col">
           <div class="perfume-group-img">
             <img src="images/delfina-iacub-nrkgRRskOBo-unsplash.jpg" alt="" />
           </div>
@@ -203,7 +203,7 @@
             <img src="images/rosy-h-nguyen-5HrlEGTsaB4-unsplash.jpg" alt="" />
           </div>
         </div>
-        <div class="dis-flex gap-md align-just-ct">
+        <div class="dis-flex gap-md align-just-ct flex-d-col">
           <div class="perfume-group-img">
             <img src="images/yixian-zhao-q7iZCOXGOWY-unsplash.jpg" alt="" />
           </div>
