Added Add-to-Cart buttons and price tags on hero section products, fixed issue of contrast ratio on image overlay text on frag section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfume</title>
 
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!----------------------- HERO SECTION ------------------------>
@@ -54,6 +54,10 @@
 
         <div class="product-list">
           <div class="product">
+            <div class="product-btn-box">
+              <div class="product-price"><span>N6,300</span></div>
+              <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
+               </div>
             <img src="images/laura-chouette--W7o_WC102U-unsplash.jpg" alt="" />
             <div class="product-description">
               <h4>Chanel</h4>
@@ -63,6 +67,11 @@
             </div>
           </div>
           <div class="product">
+            <div class="product-btn-box ">
+              <div class="product-price"><span>N12,000</span></div>
+              
+              <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
+               </div>
             <img src="images/sagar-sawant-civayXc2m9c-unsplash.jpg" alt="" />
             <div class="product-description">
               <h4>Calvin Klein</h4>
@@ -70,6 +79,10 @@
             </div>
           </div>
           <div class="product">
+            <div class="product-btn-box">
+              <div class="product-price"><span>N7,900</span></div>
+              <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
+               </div>
             <img src="images/laura-chouette-aVs_PcvTe0E-unsplash.jpg" alt="" />
             <div class="product-description">
               <h4>YSL(Black Opium)</h4>
@@ -77,6 +90,10 @@
             </div>
           </div>
           <div class="product">
+            <div class="product-btn-box">
+              <div class="product-price"><span>N2,300</span></div>
+              <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
+               </div>
             <img src="images/gift-habeshaw-C1qrJ9i4EPc-unsplash.jpg" alt="" />
             <div class="product-description">
               <h4>Creed</h4>
@@ -87,6 +104,10 @@
             </div>
           </div>
           <div class="product">
+            <div class="product-btn-box">
+              <div class="product-price"><span>N11,600</span></div>
+              <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
+               </div>
             <img src="images/jeroen-van-roij-sLQt9PjsCcs-unsplash.jpg" alt="" />
             <div class="product-description">
               <h4>Prada</h4>
@@ -94,6 +115,10 @@
             </div>
           </div>
           <div class="product">
+            <div class="product-btn-box">
+              <div class="product-price"><span>N8,500</span></div>
+              <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
+               </div>
             <img src="images/laura-chouette-mKGHmhQh-K8-unsplash.jpg" alt="" />
             <div class="product-description">
               <h4>Givenchy(L'Interdit)</h4>
