Added Bestsellers section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <li class="nav-item"><a href="#">Home</a></li>
             <li class="nav-item"><a href="#">About</a></li>
             <li class="nav-item"><a href="#">Blog</a></li>
-            <li class="nav-item"><a href="#">Contact</a></li>
+            <li class="nav-item"><a href="#">Affiliates</a></li>
+            <li class="nav-item"><a href="#">Contact Us</a></li>
           </ul>
 
           
@@ -80,7 +81,7 @@
           </div>
           <div class="product">
             <div class="product-btn-box">
-              <div class="product-price"><span>N7,900</span></div>
+              <div class="product-price"><span>N7,200</span></div>
               <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
                </div>
             <img src="images/laura-chouette-aVs_PcvTe0E-unsplash.jpg" alt="" />
@@ -91,7 +92,7 @@
           </div>
           <div class="product">
             <div class="product-btn-box">
-              <div class="product-price"><span>N2,300</span></div>
+              <div class="product-price"><span>N8,000</span></div>
               <a href="" class="product-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="four-frag-icon"></ion-icon></button></a>
                </div>
             <img src="images/gift-habeshaw-C1qrJ9i4EPc-unsplash.jpg" alt="" />
@@ -476,6 +477,66 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque asperiores accusantium maxime iusto nisi omnis quam optio harum distinctio aut!</p>
 
     </div>
+  </section>
+
+  <section class="bestseller-perf-section dis-flex align-just-ct">
+    <div class="dis-grid pad-left-md">
+    <h2 class="heading-secondary">Bestsellers</h2>
+    <p class="intro txt-al-left">Shop from a collection of our best selling perfumes. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit earum, tempore fuga qui quam, sed deleniti veritatis, architecto nam ad atque? Voluptatum iusto accusantium placeat?</p>
+    <button class="bestseller-btn-bg btn just-self-end mar-right-md">Go to Shop</button>
+  </div>
+    <div>
+<div class="bestseller-perf-box dis-flex gap-md mar-top-small">
+  <figure class="bestseller-perf">
+    <div class="bestseller-btn-box">
+      <div class="bestseller-price"><span>N6,300</span></div>
+      <a href="" class="bestseller-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="bestseller-icon"></ion-icon></button></a>
+       </div>
+    <img src="images/laura-chouette--W7o_WC102U-unsplash.jpg" alt="" srcset="">
+  </figure>
+  <figure class="bestseller-perf">
+    <div class="bestseller-btn-box">
+      <div class="bestseller-price"><span>N12,000</span></div>
+      <a href="" class="bestseller-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="bestseller-icon"></ion-icon></button></a>
+       </div>
+    <img src="images/sagar-sawant-civayXc2m9c-unsplash.jpg" alt="" srcset="">
+  </figure>
+  <figure class="bestseller-perf">
+    <div class="bestseller-btn-box">
+      <div class="bestseller-price"><span>N8,000</span></div>
+      <a href="" class="bestseller-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="bestseller-icon"></ion-icon></button></a>
+       </div>
+    <img src="images/gift-habeshaw-C1qrJ9i4EPc-unsplash.jpg" alt="" srcset="">
+  </figure>
+</div>
+
+<div class="bestseller-perf-box dis-flex gap-md mar-top-small">
+  <figure class="bestseller-perf">
+    <div class="bestseller-btn-box">
+      <div class="bestseller-price"><span>N14,000</span></div>
+      <a href="" class="bestseller-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="bestseller-icon"></ion-icon></button></a>
+       </div>
+    <img src="images/amir-2O3NECoCdKw-unsplash.jpg" alt="" srcset="">
+  </figure>
+  <figure class="bestseller-perf">
+    <div class="bestseller-btn-box">
+      <div class="bestseller-price"><span>N12,500</span></div>
+      <a href="" class="bestseller-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="bestseller-icon"></ion-icon></button></a>
+       </div>
+    <img src="images/karly-jones-4i9ef6xU738-unsplash.jpg" alt="" srcset="">
+  </figure>
+  <figure class="bestseller-perf">
+    <div class="bestseller-btn-box">
+      <div class="bestseller-price"><span>N8,500</span></div>
+      <a href="" class="bestseller-btn"><button class="btn">Add to Cart <ion-icon name="cart" class="bestseller-icon"></ion-icon></button></a>
+       </div>
+    <img src="images/laura-chouette-mKGHmhQh-K8-unsplash.jpg" alt="" srcset="">
+  </figure>
+</div>
+</div>
+
+
+
   </section>
     <script
       type="module"
