--- a/index.html
+++ b/index.html
@@ -538,6 +538,16 @@
 
 
   </section>
+
+  <section class="brands dis-grid">
+    <div class="brands-box dis-flex gap-md">
+      <img class="brand-logo" src="images/Gucci-Logo-PNG4-copy-1.png" alt="">
+       <img class="brand-logo" src="images/Yves-Saint-Laurent-logo.png" alt="">
+        <img class="brand-logo" src="images/Chanel logo.png" alt="">
+         <img class="brand-logo" src="images/Dolce_and_Gabbana_logo_transparent_5000x555-700x78.png" alt="">
+          <img class="brand-logo" src="images//tom-logo.png" alt="">
+    </div>
+  </section>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
